// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingPopover/> render() should render with value 1`] = `
<body>
  <div>
    <div>
      <button
        class="p-0 focusable btn btn-link"
        id="shipping-lines"
        tabindex="0"
        type="button"
      >
        <strong>
          Add shipping
        </strong>
      </button>
      <span
        class="title"
      >
        Standard Shipping
      </span>
    </div>
  </div>
</body>
`;

exports[`<ShippingPopover/> render() should render without value 1`] = `
<body>
  <div>
    <div>
      <button
        class="p-0 focusable btn btn-link"
        id="shipping-lines"
        tabindex="0"
        type="button"
      >
        <strong>
          Add shipping
        </strong>
      </button>
    </div>
  </div>
</body>
`;
